# substreams-sync

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
cmd/substreams-sink-postgres/: run.go
devel/: substreams-sink-postgres  up.sh
devel/sync-local/: clean.sql  schema.sql
docs/nftLoader/: Cargo.toml  schema.sql  substreams.yaml
docs/nftLoader/abi/: erc721.json
docs/nftLoader/proto/: erc721.proto  transfers.proto
docs/nftLoader/src/: lib.rs
docs/nftLoader/src/abi/: erc1155.rs  erc20.rs  erc721.rs  mod.rs
docs/nftLoader/src/pb/: eth.erc721.v1.rs  eth.transfers.v1.rs  mod.rs
example_consumer/: index.ts  notifyConsumer.sql  package-lock.json  package.json
sinker/: sinker.go
