[package]
name = "substreams-postgresql-sink-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5.0"
prost = "0.11"
substreams-database-change = "1.0.0"
anyhow = "1"
lazy_static = "1.4.0"
rayon = "1.5.1"
prost-types = "0.11"
chrono = { version = "0.4", features = [ "std" ], default-features = false }
num-bigint = "0.4.3"
ethabi = "17"
sha2 = "0.9.5"
hex-literal = "0.3.4"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "^0.9.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"